--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,7 +66,7 @@
 		{
 			"label": "run",
 			"type": "shell",
-			"command": "${cwd}/build/test_hanoi", // 这里需要频繁修改
+			"command": "${cwd}/build/str", // 这里需要频繁修改
 			"group": "build",
 			"presentation": {
 				"echo": true,
