--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(ma mm1_memory_layout.cpp)
 # add_executable(exception exception_ctor_dtor.cpp)
 add_executable(olebco mm2_object_layout_ebco.cpp)
 add_executable(mm3 mm3_virtual_function_layout.cpp)
+add_executable(dp2 dp2_crtp_virtual_clone.cpp)
 
 # Iterator the files to automatically get the executable file
 # file(GLOB_RECURSE _sources RELATIVE
