--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ add_executable(ma mm1_memory_layout.cpp)
 add_executable(olebco mm2_object_layout_ebco.cpp)
 add_executable(mm3 mm3_virtual_function_layout.cpp)
 add_executable(dp2 dp2_crtp_virtual_clone.cpp)
+add_executable(dp3 Pimpl/dp3_Pimpl_idiom.cpp Pimpl/abi.h)
 
 # Iterator the files to automatically get the executable file
 # file(GLOB_RECURSE _sources RELATIVE
