add variadic template and fold expression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,12 @@ add_executable(test5 05_auto_decltype.cpp)
 add_executable(test6 06_initializer_list.cpp)
 add_executable(test11 11_inline.cpp test_inline_1.cpp test_inline_2.cpp)
 add_executable(test12 12_nullptr.cpp)
-# add_executable(test13 13_variadic_template.cpp)
+add_executable(test13 13_variadic_template.cpp)
 add_executable(test14 14_default_initializer.cpp)
 add_executable(test15 15_rvo.cpp)
 # add_executable(test_hanoi hanoi.cpp)
+add_executable(test test.cpp)
+
 
 add_executable(sl5 sl5_any.cpp)
 add_executable(sl7 sl7_my_string.cpp)
@@ -51,7 +53,7 @@ add_executable(dp1 dp1_scopeguard.cpp)
 add_executable(dp1_raii dp1_raii.cpp)
 add_executable(dp2 dp2_crtp_virtual_clone.cpp)
 add_executable(dp2_1 dp2_crtp.cpp)
-add_executable(dp3 Pimpl/dp3_Pimpl_idiom.cpp Pimpl/abi.h)
+add_executable(dp3 Pimpl/v1/dp3_main.cpp Pimpl/v1/abi.h Pimpl/v1/dp3_Pimpl_idiom.cpp)
 add_executable(dp4_1 template_method/dp4_template_method_1.cpp)
 add_executable(dp4_2 template_method/dp4_template_method_2.cpp)
 add_executable(dp4_3 template_method/dp4_crtp_template_method.cpp)
