--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,14 @@ add_executable(test3 03_typedef_using.cpp)
 add_executable(test4 04_enum.cpp)
 add_executable(test5 05_auto_decltype.cpp)
 add_executable(test6 06_initializer_list.cpp)
+add_executable(test8 08_explicit.cpp)
+add_executable(test9 09_rule_of_five.cpp)
 add_executable(test11 11_inline.cpp test_inline_1.cpp test_inline_2.cpp)
 add_executable(test12 12_nullptr.cpp)
 add_executable(test13 13_variadic_template.cpp)
 add_executable(test14 14_default_initializer.cpp)
 add_executable(test15 15_rvo.cpp)
 # add_executable(test_hanoi hanoi.cpp)
-add_executable(test test.cpp)
 
 
 add_executable(sl5 sl5_any.cpp)
@@ -49,6 +50,7 @@ add_executable(sl7 sl7_my_string.cpp)
 add_executable(mm1 mm1_memory_layout.cpp)
 add_executable(mm2 mm2_object_layout_ebco.cpp)
 add_executable(mm3 mm3_virtual_function_layout.cpp)
+add_executable(mm4_1 smart_pointer/mm4_smart_pointer_unique.cpp)
 
 add_executable(dp1 dp1_scopeguard.cpp)
 add_executable(dp1_raii dp1_raii.cpp)
